# plantsitter

./: .gitignore  LICENSE.md  README.md  config.json.sample  sensors.py
dashboard/: .gitignore  care.py  config.json.sample  config.py  connection.py  controller.py  dashboard.py  drop.py  example2.py  layout.py  main.py  mongo.py  monitor.py  notify.py  patch.py  pyproject.toml  read.py  run  scrape.py  test.py  tracker.py
dashboard/notifications/: email.py  manager.py  text.py
dashboard/plant_care/: notify.py  pfaf_scraper.py  plant_scraper.py  scrape.py  wikipedia_scraper.py
dashboard/plant_dash/: controller.py  dashboard.py  layout.py  monitor.py  settings_manager.py  sitter.py  tracker.py
sitter/: config.py  influx.py  motor.py  motors.py  pump.py  pyproject.toml  run  sensors.py  sitter.py  system.py  turret.py
utils/: influx.py  mongo.py
