[tool.poetry]
name = "plantsitter"
version = "0.1.0"
description = "A plant babysitter"
authors = ["LSaldyt <lucassaldyt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Quart = "^0.14.1"
gpiozero = "^1.5.1"
influxdb = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
